@@ -26,6 +26,8 @@
 	  (wine git 5dc0d4d1ed2de76f21ba4f5298ba9ab251c6fd83).
 	* dpnathlp.h: update prototype of DirectPlayNATHelpCreate() 
 	  (wine git ab62cd360f611ea2cc806acee044a7ea25773fd8).
+	* dsound.h: added missing A/W function / type definitions 
+	  (wine git 375f8ba23761d75230805e86bc057ef7755cb57c).
 
 2009-04-04  Ozkan Sezer <sezeroz@gmail.com>
 
